pages/styles.css
body {
  margin: 0;
}
header,
footer {
  grid-column-end: span 3;
}
main {
  grid-column-start: 2;
  width: 100%;
  max-width: 64rem;
  margin-inline-end: auto;
  margin-inline-start: auto;
}
nav {
  grid-row-start: 2;
  position: sticky;
  top: 0;
}
aside {
  grid-column-start: 3;
}
header {
  width: 100%;
}

#__next {
  display: grid;
  row-gap: 1.5rem;
  column-gap: 1.5rem;
  grid-template-rows: 37px 1fr 100px;
  grid-template-columns: auto 1fr 175px;
  min-height: 100vh;
}

@media (max-width: 1200px) {
  #__next {
    grid-template-columns: auto 1fr 0px;
  }
}

@media (max-width: 991px) {
  #__next {
    grid-template-columns: 0px 1fr 0px;
  }
}

.rgb {
  background: linear-gradient(
    124deg,
    #ff2400,
    #e81d1d,
    #e8b71d,
    #e3e81d,
    #1de840,
    #1ddde8,
    #2b1de8,
    #dd00f3,
    #dd00f3
  );

  -webkit-animation: rainbow 18s ease infinite;
  -z-animation: rainbow 18s ease infinite;
  -o-animation: rainbow 18s ease infinite;
  animation: rainbow 18s ease infinite;
  background-size: 1800% 1800%;
}

@-webkit-keyframes rainbow {
  0% {
    background-position: 0% 82%;
  }
  50% {
    background-position: 100% 19%;
  }
  100% {
    background-position: 0% 82%;
  }
}
@-moz-keyframes rainbow {
  0% {
    background-position: 0% 82%;
  }
  50% {
    background-position: 100% 19%;
  }
  100% {
    background-position: 0% 82%;
  }
}
@-o-keyframes rainbow {
  0% {
    background-position: 0% 82%;
  }
  50% {
    background-position: 100% 19%;
  }
  100% {
    background-position: 0% 82%;
  }
}
@keyframes rainbow {
  0% {
    background-position: 0% 82%;
  }
  50% {
    background-position: 100% 19%;
  }
  100% {
    background-position: 0% 82%;
  }
}

/* 
For Next.JS image
*/

.rounded {
  border-radius: 50%;
}

a.nounderline {
  text-decoration: none !important;
}

/*
For React Datepicker
 */
.light-datepicker {
  --light-gray: var(--chakra-colors-gray-200);
  --gray: var(--chakra-colors-gray-300);
  --blue600: var(--chakra-colors-blue-500);
  --text: var(--chakra-colors-black);
}
.dark-datepicker {
  --light-gray: var(--chakra-colors-whiteAlpha-300);
  --gray: var(--chakra-colors-whiteAlpha-400);
  --blue600: var(--chakra-colors-blue-300);
  --text: #edf2f7; /* default color slightly differs from chakra-colors-gray-100 */
}

.react-datepicker-wrapper {
  width: 100%;
}

.react-datepicker__input-container {
  -webkit-padding-start: var(--chakra-space-4);
  padding-inline-start: var(--chakra-space-4);
  -webkit-padding-end: var(--chakra-space-2);
  padding-inline-end: var(--chakra-space-2);
  border-radius: var(--chakra-radii-md);
  border: 1px solid;
  border-color: var(--light-gray);
}

.react-datepicker__input-container:hover {
  border-color: var(--gray);
}

.react-datepicker__input-container:focus-within {
  z-index: 1;
  border-color: var(--blue600);
  box-shadow: 0 0 0 1px var(--blue600);
}

.react-datepicker__input-container > input {
  background-color: transparent;
  width: 100%;
  height: var(--chakra-sizes-10);
  color: var(--text);
  outline: none;
}

